update stage04-1